Project-Stages/Project-Stage-3-Advanced-DevOps-Pipeline/gitops/environments/dev/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcare-backend-stage3
  namespace: healthcare-stage3-dev
  labels:
    app: healthcare-backend-stage3
    tier: backend
    environment: dev
    stage: stage-3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: healthcare-backend-stage3
      tier: backend
  template:
    metadata:
      labels:
        app: healthcare-backend-stage3
        tier: backend
        environment: dev
        stage: stage-3
    spec:
      containers:
      - name: backend
        image: 867344452513.dkr.ecr.us-east-1.amazonaws.com/healthcare-backend-stage3:35e5561e37e64b78ee1a859dad08a2041f3ce7be
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
          name: http
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "400m"
        livenessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: backend-stage3-svc
  namespace: healthcare-stage3-dev
  labels:
    app: healthcare-backend-stage3
    tier: backend
    environment: dev
    stage: stage-3
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
    name: http
  selector:
    app: healthcare-backend-stage3
    tier: backend
